min-height for editable boxes too short; fixes Edit Content button render

--- a/pycon/static/less/site.less
+++ b/pycon/static/less/site.less
@@ -215,7 +215,7 @@ img.diamond-sponsors {
     .swap-button-color(@yellowBeak, @button-warning-hover, @button-warning-active);
   }
   &.btn-inverse {
-    .swap-button-color(@white, @button-inverse-hover, @button-inverse-active);    
+    .swap-button-color(@white, @button-inverse-hover, @button-inverse-active);
   }
 
   // Button icon
@@ -278,8 +278,8 @@ nav {
       border: none;
     }
 
-    .nav { 
-      li { 
+    .nav {
+      li {
          a {
           font-size: @baseFontSize + 3;
           margin: 0 20px 0 0;
@@ -344,7 +344,7 @@ nav {
       }
     }
   }
-    
+
     a.logo-small {
       position:absolute;
       top: 5px;
@@ -883,7 +883,7 @@ body.auth {
 .content-box.editable {
     border: 1px dashed #bbb;
     padding: 5px;
-    min-height: 30px;
+    min-height: 40px;
 }
 .edit-toggle {
     position: relative;
